--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,25 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="GDSC is a community of enthusiastic and creative students who are dedicated to learning, sharing, and exploring the world of technology. We are affiliated with Google and operate on campuses around the globe. Our goal is to empower students with the latest technological skills, foster a spirit of collaboration, and create a platform for networking and personal growth."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%//apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%//favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%//favicon-16x16.png"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>GDSC GHRCE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
