--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="GDSC is a community of enthusiastic and creative students who are dedicated to learning, sharing, and exploring the world of technology. We are affiliated with Google and operate on campuses around the globe. Our goal is to empower students with the latest technological skills, foster a spirit of collaboration, and create a platform for networking and personal growth."
+      content="GDSC GHRCE is a community of students passionate about technology and development. It is a student-led initiative supported by Google Developers, aimed at providing a platform for students to learn, collaborate, and build projects using various Google technologies."
     />
     <link
       rel="apple-touch-icon"
