--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,13 @@
     <meta
       name="description"
       content="GDSC GHRCE is a community of students passionate about technology and development. It is a student-led initiative supported by Google Developers, aimed at providing a platform for students to learn, collaborate, and build projects using various Google technologies."
-    />
+      data-react-helmet="true"
+      />
+    <meta
+      name="description"
+      content="Figma Lifestyle with GDSC is a dynamic event that celebrates the fusion of design and technology. It's an opportunity for participants to explore the world of design, learn from industry experts, and collaborate with fellow enthusiasts. This event promises to be a day filled with creativity, innovation, and networking. Join us in making this event a memorable and enriching experience for all participants."
+      data-react-helmet="true"
+      />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -28,7 +34,7 @@
     />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
+    <!-- <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gdscghrce.netlify.app/" />
     <meta property="og:title" content="GDSC GHRCE" />
     <meta
@@ -38,10 +44,10 @@
     <meta
       property="og:image"
       content="%PUBLIC_URL%//GDSCGHRCE_full.png"
-    />
+    /> -->
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
+    <!-- <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://gdscghrce.netlify.app/" />
     <meta property="twitter:title" content="GDSC GHRCE" />
     <meta
@@ -51,7 +57,7 @@
     <meta
       property="twitter:image"
       content="%PUBLIC_URL%//GDSCGHRCE_full.png"
-    />
+    /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -66,7 +72,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>GDSC GHRCE</title>
+    <title data-react-helmet="true">GDSC GHRCE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
