--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
       content="Figma Lifestyle with GDSC is a dynamic event that celebrates the fusion of design and technology. It's an opportunity for participants to explore the world of design, learn from industry experts, and collaborate with fellow enthusiasts. This event promises to be a day filled with creativity, innovation, and networking. Join us in making this event a memorable and enriching experience for all participants."
       data-react-helmet="true"
       />
+
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -33,35 +36,6 @@
       href="%PUBLIC_URL%//favicon-16x16.png"
     />
 
-    <!-- Open Graph / Facebook -->
-    <!-- <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://gdscghrce.netlify.app/" />
-    <meta property="og:title" content="GDSC GHRCE" />
-    <meta
-      property="og:description"
-      content="GDSC GHRCE is a community of students passionate about technology and development. It is a student-led initiative supported by Google Developers, aimed at providing a platform for students to learn, collaborate, and build projects using various Google technologies."
-    />
-    <meta
-      property="og:image"
-      content="%PUBLIC_URL%//GDSCGHRCE_full.png"
-    /> -->
-
-    <!-- Twitter -->
-    <!-- <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://gdscghrce.netlify.app/" />
-    <meta property="twitter:title" content="GDSC GHRCE" />
-    <meta
-      property="twitter:description"
-      content="GDSC GHRCE is a community of students passionate about technology and development. It is a student-led initiative supported by Google Developers, aimed at providing a platform for students to learn, collaborate, and build projects using various Google technologies."
-    />
-    <meta
-      property="twitter:image"
-      content="%PUBLIC_URL%//GDSCGHRCE_full.png"
-    /> -->
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
